test/testdata/classes/methods/init/invalid_binary_op_error.lox
class Foo {
  init() {}
}
Foo().init - 1; // error: '-' operator cannot be used with types 'function' and 'number'
